# YSLwebserver

./: 2023_04_27_ServerLog  README.md  YSL.md  main.cpp  makefile  server
CGImysql/: sql_connection_pool.cpp  sql_connection_pool.h
http/: http_conn.cpp  http_conn.h
lock/: locker.h
other/: CMakeLists.txt  main copy.cpp
test/: test1.cpp  test2.cpp  test_signal.cpp
threadpool/: threadpool.h
